Added Global Menu

--- a/css/firelight.css
+++ b/css/firelight.css
@@ -9,6 +9,8 @@
 [Table of content]
  
 	1. Reset
+	2. Global
+	
 
 /*------------------------------------------------------------------
 [1. Reset]
@@ -30,3 +32,7 @@ time, mark, audio, video {
 	padding: 0;
 	border: 0;
 }
+
+/*------------------------------------------------------------------
+[1. Global]
+*/
