--- a/css/firelight.css
+++ b/css/firelight.css
@@ -94,8 +94,8 @@ body{
 		-moz-border-radius:0px;
 			border-radius: 0px;
 }
-.button.round{
-	-webkit-border-radius: 150px;
-		-moz-border-radius:150px;
-			border-radius: 150px;
+.round{
+	-webkit-border-radius: 100%;
+		-moz-border-radius:100%;
+			border-radius: 100%;
 }
