--- a/css/firelight.css
+++ b/css/firelight.css
@@ -16,18 +16,18 @@
 /*------------------------------------------------------------------
 [1. Reset]
 */
+*{
+	outline: none;
+	-webkit-box-sizing: border-box; 
+        -moz-box-sizing:border-box;    
+            box-sizing: border-box
+}
 html, 
 body{
 	margin: 0;
 	padding: 0;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
     font-weight: 300;
-}
-*{
-	outline: none;
-	-webkit-box-sizing: border-box; 
-        -moz-box-sizing:border-box;    
-            box-sizing: border-box
 }
 
 /*------------------------------------------------------------------
@@ -38,7 +38,7 @@ body{
 .button{
 	position: relative;
 	text-decoration: none;
-	background-color: rgba(233, 233, 233, .8); 
+	background-color: rgba(233, 233, 233, .90); 
 	color: rgba(29, 29, 29, 1); 
 	border: 1px solid rgba(195, 195, 195, 1);
 	cursor: pointer; 
@@ -61,7 +61,7 @@ body{
 	background-color: rgba(221, 221, 221, 1); 
 }
 .button.blue{ 
-	background-color: rgba(0, 136, 204, .8);
+	background-color: rgba(0, 136, 204, .90);
 	border: 1px solid rgba(10, 65, 194, 1);
 	color: white;
 }
@@ -70,7 +70,7 @@ body{
 	background-color: rgba(0, 136, 204, 1);
 }
 .button.red{
-	background-color: rgba(242, 46, 46, .8);
+	background-color: rgba(242, 46, 46, .90);
 	border: 1px solid rgba(191, 36, 36, 1);
 	color: white;
 }
@@ -79,7 +79,7 @@ body{
 	background-color: rgba(242, 46, 46, 1);
 }
 .button.green{
-	background-color: rgba(73, 140, 90, .8);
+	background-color: rgba(73, 140, 90, .90);
 	border: 1px solid rgba(44, 89, 63, 1);
 	color: white;
 }
@@ -87,7 +87,6 @@ body{
 .button.green:focus{
 	background-color: rgba(73, 140, 90, 1);
 }
-
 
 .button.square{
 	-webkit-border-radius: 0px;
@@ -98,4 +97,17 @@ body{
 	-webkit-border-radius: 150px;
 		-moz-border-radius:150px;
 			border-radius: 150px;
+}
+
+.button.mini{
+	font-size: 10px;
+	padding: 5px 10px;
+}
+.button.small{
+	font-size: 12px;
+	padding: 8px 16px;
+}
+.button.big{
+	font-size: 16px;
+	padding: 15px 30px;
 }
